# utils_methods

./: LICENSE  README.md
LRU/: lru.h  readme.txt
LZ-string/: lzString.h  readme.txt
base64_transcode/: base64_trans.h  readme.txt
bezier_curve/: beziercurve.h  readme.txt
crc/: crc.c  crc.h  readme.txt
endian_check/: endian_check.h
enum_to_string/: enumToString.h  readme.txt
filesystem/: readme.txt
kalman/: readme.txt
kalman/lib/: extended_kalman_filter.cpp  extended_kalman_filter.h  kalman_filter_types.h  linear_kalman_filter.cpp  linear_kalman_filter.h  unscented_kalman_filter.cpp  unscented_kalman_filter.h
kalman/single_include/: extended_kalman_filter.h  linear_kalman_filter.h  unscented_kalman_filter.h
memorypool/: memorypool.hpp
objectpool/: objectpool.hpp
opencv_api/: imageProcess.cpp  imageProcess.h  readme.txt
opencv_api/script/: build_opencv.sh
process_control/: process_utils.cpp  process_utils.h
scopeguard/: readme.txt  scopeguard.h
singleton/: readme.txt  singleton.h
threadpool/method_1/: readme.txt  threadpool.h
threadpool/method_2/: readme.txt
threadpool/method_2/c/: threadpool.cc  threadpool.h
threadpool/method_2/c++/: threadpool.h  threadpool.hpp
threadpool/method_2/windows/: threadpool_win.cc  threadpool_win.h
z_test/: CMakeLists.txt  compare_file_same.py  readme.txt  test1_threadpool.cpp  test_crc.cpp  test_lru.cpp  test_scopeguard.cpp  test_threadpool.cpp
z_test/test_opencv/: CMakeLists.txt  main.cpp
z_test/test_opencv/lib/: libopencv_highgui.so.409  libopencv_imgcodecs.so.409
